使用pipenv管理python依赖

--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -1,5 +1,5 @@
 [program:djblog]
-command=/data/deploy_app/djblog/.venv/bin/gunicorn djblog.wsgi
+command=pipenv run gunicorn djblog.wsgi
 directory=/data/deploy_app/djblog
 user=deploy
 autostart=true
