add deploy settings

--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -1,5 +1,5 @@
 [program:djblog]
-command=pipenv run gunicorn djblog.wsgi
+command=pipenv run gunicorn -b 127.0.0.1:3901 djblog.wsgi
 directory=/data/deploy_app/djblog
 user=deploy
 autostart=true
