--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ django = "*"
 django-filter = "*"
 django-el-pagination = "*"
 gunicorn = "*"
-fabric = "*"
+fabric3 = "*"
 
 [requires]
 python_version = "3.7"
